# kai-chattr

./: .gitignore  .sops.yaml  AGENTS.md  README.md  changelog.md  package.json  playwright.config.ts  pnpm-lock.yaml
apps/web/: AGENTS.md  (+4 more)
services/api/: .dockerignore  Dockerfile  README.md  config.local.toml.example  config.toml  fly.dev.toml  fly.prod.toml  fly.toml  pyproject.toml  requirements.txt  run.py  wrapper.py  wrapper_api.py  wrapper_unix.py  wrapper_windows.py
services/api/app/: __init__.py  asgi.py  background.py  cli.py  config.py  context.py  database.py  db.py  endpoint_contract.py  endpoint_contract_registry.py  factory.py  lifecycle.py  logging_config.py  main.py  product_routes.py  pydantic_contracts.py  runtime_contract.py  security.py  settings.py  versioning.py  websocket.py  workspace_files.py
services/api/app/agents/: __init__.py
services/api/app/api/: __init__.py  system.py  ws.py
services/api/app/auth/: __init__.py  deps.py  oauth_providers.py  passwords.py  tenancy.py  throttle.py  tokens.py
services/api/app/core/: __init__.py
services/api/app/events/: __init__.py  jsonl_stream.py  terminal_event_schema.py
services/api/app/launch/: __init__.py  agents.toml  chattr_launcher.py  visible_agent_launcher.py
services/api/app/mcp/: __init__.py  bridge.py  proxy.py  tools.py
services/api/app/observability/: __init__.py  runtime.py
services/api/app/proposals/: __init__.py  patch_kernel.py
services/api/app/routes/: __init__.py  agent_runtime.py  agents.py  archive.py  auth.py  hats.py  home_start.py  invitations.py  jobs.py  launchers.py  locked.py  messages.py  model_providers.py  oauth.py  pins.py  platform.py  right_rail.py  roles.py  rules.py  schedules.py  sessions.py  static_frontend.py  status.py  terminal.py  workspace.py
services/api/app/runtime/: __init__.py  agents.py  routing.py
services/api/app/schemas/: board_workflows.py  home_start.py  workbench_settings.py  workbench_settings.schema.json
services/api/migrations/: env.py
services/api/schemas/: session-draft-message-metadata.schema.json  session-start-request.schema.json  session-template.schema.json
services/api/tests/: __init__.py  conftest.py  test_account_invitations.py  test_agent_event_stream.py  test_agent_runtime_cards.py  test_agent_runtime_config.py  test_app_broadcast_perf.py  test_approval_chat_bridge.py  test_approval_fixture_screens.py  test_archive_feature.py  test_auth_routes.py  test_auth_session_tenancy.py  test_auth_throttle.py  test_auth_unification.py  test_channel_fallback.py  test_chat_join_message.py  test_chattr_launcher.py  test_config_overrides.py  test_database_runtime.py  test_endpoint_contract_registry.py  test_headless_agent_launch.py  test_health.py  test_home_start_api.py  test_identity_foundation_db.py  test_launcher_control_api.py  test_mcp_right_rail_tools.py  test_model_providers_api.py  test_oauth_s1.py  test_observability_contract.py  test_package_layout_contract.py  test_platform_api.py  test_proposal_patch_kernel.py  test_pty_session.py  test_pty_terminal_backend.py  test_pydantic_contracts.py  test_router.py  test_routing_decisions_db.py  test_runtime_agent_loop.py  test_runtime_contract.py  test_runtime_health.py  (+11 more)
(+319 files in other folders)
