[project]
name = "chattr"
version = "0.1.0"
description = "Local multi-agent chat and launcher control plane"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "argon2-cffi>=25.1.0",
  "fastapi>=0.110",
  "mcp>=1.0",
  "opentelemetry-api>=1.42.1",
  "opentelemetry-exporter-otlp>=1.42.1",
  "opentelemetry-instrumentation-fastapi>=0.63b1",
  "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
  "opentelemetry-sdk>=1.42.1",
  "psycopg2-binary>=2.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.0",
  "sqladmin>=0.18",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.29",
]

[tool.uv]
# Repo on drive E: and uv cache elsewhere often breaks hardlinks during sync;
# a half-written .venv then yields "No pyvenv.cfg file" and the server never starts.
link-mode = "copy"

[dependency-groups]
dev = [
  "pytest",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
