[project]
name = "chattr"
version = "0.1.0"
description = "Local multi-agent chat and launcher control plane"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "argon2-cffi>=25.1.0",
  "fastapi>=0.110",
  "httpx>=0.28.1",
  "mcp>=1.0",
  "opentelemetry-api>=1.42.1",
  "opentelemetry-exporter-otlp>=1.42.1",
  "opentelemetry-instrumentation-fastapi>=0.63b1",
  "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
  "opentelemetry-sdk>=1.42.1",
  "psycopg2-binary>=2.9",
  "pydantic>=2.7",
  "pydantic-settings>=2.0",
  "pyte>=0.8",
  "pywinpty>=2.0 ; sys_platform == 'win32'",
  "sqladmin>=0.18",
  "sqlalchemy>=2.0",
  "tomlkit>=0.13",
  "tzdata>=2025.2",
  "uvicorn[standard]>=0.29",
]

[tool.uv]
# Repo on drive E: and uv cache elsewhere often breaks hardlinks during sync.
# Use UV_PROJECT_ENVIRONMENT (see scripts/dev/api-uv-env.ps1) — no repo-local .venv.
link-mode = "copy"

[dependency-groups]
dev = [
  "pytest",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
